# anomalies_detection

./: BULK.md  README.md  RUN.md  __init__.py  annotator.py  api-discovery.md  config.py  demo.py  env.example  pyproject.toml  synthetic_eval.jsonl  test_smoke.py
docs/: api-discovery.md  codebook.md  finetune_plan.md  finetune_v3_plan.md  finetune_v3a_results.md  ftv3a_honest_assessment.md  models_summary.tex  progress.md  results.md
scripts/: annotate_v2.py  annotate_v2_2stage.py  apply_translations.py  build_finetune_dataset.py  build_finetune_dataset_v2.py  build_finetune_dataset_v3.py  bulk_corpus.py  check_finetune_status.py  check_finetune_v2_status.py  check_finetune_v3_mini_status.py  check_finetune_v3_status.py  check_finetuning.py  compare_heldout_results.py  compare_v1_v2.py  compute_cascade_metrics.py  compute_ftv3a_metrics.py  convert_doc_to_docx.py  convert_doc_to_docx_v2.py  count_anglicisms.py  dump_all_heldout_flags.py  dump_ftv2_heldout.py  dump_v2_2stage_flags.py  ensemble.py  extract_heldout_contexts.py  extract_rule_trues.py  extract_rule_trues_v2.py  final_comparison.py  generate_heldout_chart.py  generate_vkr_charts.py  grammar_check.py  grammar_check_full.py  grammar_deep_scan.py  precision_analysis.py  prepare_bulk_review.py  prepare_heldout_low_review.py  prepare_review_pack.py  prepare_v2_review.py  prepare_v3_review.py  rule_detector.py  rule_detector_v2.py  (+27 more)
src/: build_corpus.py  generate.py  metrics.py  segmenter.py
src/eval/: __init__.py
src/ingest/: __init__.py  downloader.py  marker_client.py
src/models/: __init__.py  schema.py  (+1 more)
(+10 files in other folders)
